/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}


javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
}

application {
    mainClass = 'cz.zcu.jsmahy.datamining.Main'
    applicationDefaultJvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
                                 "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
                                 "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",]
}

dependencies {
    annotationProcessor('org.projectlombok:lombok:1.18.24')
    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'org.openjfx:javafx-base:17'
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'org.openjfx:javafx-graphics:17'
    implementation 'org.openjfx:javafx-fxml:17'
    implementation 'org.openjfx:javafx-web:17'
    implementation 'org.openjfx:javafx-media:17'
    implementation 'org.openjfx:javafx-swing:17'
    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'org.slf4j:slf4j-api:2.0.5'
    implementation 'org.slf4j:slf4j-simple:2.0.5'
    implementation 'com.dlsc.formsfx:formsfx-core:11.5.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'org.apache.jena:jena-core:4.6.1'
    implementation 'org.apache.jena:jena-arq:4.6.1'
    implementation 'org.apache.jena:jena-iri:4.6.1'
    implementation 'org.jgrapht:jgrapht-core:1.5.1'
    implementation 'org.jgrapht:jgrapht-io:1.5.1'
    implementation 'com.google.inject:guice:5.1.0'
    testImplementation 'net.synedra:validatorfx:0.4.0'
    compileOnly 'org.projectlombok:lombok:1.18.24'
}

group = 'cz.zcu.jsmahy'
version = '1.0'
description = 'DataMining'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

mainClassName = 'cz.zcu.jsmahy.Main'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
